commit bug fixes and sonarLint fixes 01-Jun-2023

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ code {
 .resend-otp-wrap {
   text-align: center;
   width: 100%;
-  font-family: "Quicksand";
+  font-family: "Quicksand", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -58,7 +58,6 @@ code {
   margin-bottom: 10px;
 }
 .resend-otp-wrap p {
-  margin-top: 10px;
   padding: 0px !important;
   margin: 15px 0px 10px;
   font-size: 18px;
