--- a/src/pages/add-card/addCard.module.scss
+++ b/src/pages/add-card/addCard.module.scss
@@ -1,6 +1,7 @@
 .range_container {
   input[type="range"] {
     -webkit-appearance: none;
+    appearance: none;
     height: 4px;
     background: #f2f2f2;
     border-radius: 5px;
@@ -12,6 +13,7 @@
   /* Input Thumb */
   input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
+    appearance: none;
     height: 20px;
     width: 20px;
     border-radius: 43%;
@@ -23,6 +25,7 @@
 
   input[type="range"]::-moz-range-thumb {
     -webkit-appearance: none;
+    appearance: none;
     height: 20px;
     width: 20px;
     border-radius: 43%;
@@ -34,6 +37,7 @@
 
   input[type="range"]::-ms-thumb {
     -webkit-appearance: none;
+    appearance: none;
     height: 20px;
     width: 20px;
     border-radius: 43%;
