commit 0.1.0 added changes for warning and sonar fixes 02-Jun-2023

--- a/src/components/time-picker/TimePicker.module.scss
+++ b/src/components/time-picker/TimePicker.module.scss
@@ -13,7 +13,7 @@
       }
       .cx_time_confirm {
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         padding: 2px;
         button {
           background: #0081c5;
