--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -839,6 +839,39 @@
     padding-right: 12px;
     margin-right: 12px;
   }
+  ul.refund-comn-ul .rcard-info h3 {
+    font-size: 18px;
+    line-height: 18px;
+  }
+  ul.refund-comn-ul .btns-wrap > button:not(:last-child) {
+    margin-right: 8px;
+  }
+  ul.refund-comn-ul .rcard-img-wrap {
+    width: 70px;
+    padding-right: 5px;
+  }
+  .rcard-img-wrap .wr-bank-svg {
+    width: 50px;
+    height: 50px;
+    border-radius: 31px;
+  }
+  ul.refund-comn-ul .rcard-details-wrap {
+    width: calc(100% - 70px);
+  }
+  .refund-filter-btn-wrap > button:not(:last-child) {
+    margin-right: 10px;
+  }
+  .refund-sf-wrap {
+    margin: 0px 20px;
+  }
+  .div-font-14 {
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .div-font-18 {
+    font-size: 15px;
+    line-height: 22px;
+  }
 }
 @media only screen and (max-width: 1199px) {
   .profile-right-sec {
@@ -1318,6 +1351,40 @@
   .settings-edit-profile-top-sec {
     padding-bottom: 38px;
   }
+  ul.refund-comn-ul .total-val-wrap {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  ul.refund-comn-ul .eligible-value-wrap {
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .wrb-req-btn,
+  .wr-bank-fillter-wrap .rf-details-div {
+    width: 100%;
+    padding-left: 0px;
+  }
+  .wb-refund-wrapper .refund-filter-wrapper {
+    flex-wrap: wrap;
+  }
+  .wh-id-date-wrap {
+    flex-wrap: wrap;
+  }
+  .wh-id-date-wrap > div {
+    width: 100% !important;
+  }
+  .wh-status-div {
+    padding-right: 0px;
+  }
+  .wh-status-amt-wrap .wh-amt {
+    padding-left: 8px;
+  }
+  .wh-id-date-wrap > div:not(:last-child) {
+    margin-bottom: 5px;
+  }
+  .wh-status-info > div {
+    width: 33.33% !important;
+  }
 }
 @media only screen and (max-width: 1366px) and (min-width: 992px) {
   .business-info-right-sec {
@@ -1764,6 +1831,34 @@
     font-size: 20px;
     line-height: 24px;
   } */
+  ul.refund-comn-ul .card-details {
+    flex-direction: column;
+  }
+  ul.refund-comn-ul .card-details > div {
+    width: 100%;
+  }
+  ul.refund-comn-ul .rcard-info {
+    margin-bottom: 10px;
+    margin-right: 0px;
+    min-width: 100%;
+  }
+  ul.refund-comn-ul .total-val-wrap {
+    margin-bottom: 10px;
+  }
+  ul.card-refund-ul .card-details {
+    width: 40%;
+  }
+  ul.card-refund-ul .rcard-status-wrap {
+    width: 50%;
+  }
+  .wr-title-wrap h2 {
+    font-size: 28px;
+    line-height: 34px;
+  }
+  ul.refund-comn-ul {
+    padding-top: 35px;
+    padding-bottom: 35px;
+  }
 }
 @media only screen and (max-width: 991px) and (min-width: 820px) {
   .profile-inner-sec .profile-left-content,
@@ -2837,6 +2932,15 @@
   .dashboard-home-container .dashboard-card-links-sec {
     padding-top: 25px;
   }
+  ul.card-refund-ul li {
+    align-items: start;
+  }
+  ul.bank-refund-ul li {
+    align-items: center;
+  }
+  .wr-details-back-btn {
+    margin-top: 25px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -3792,6 +3896,79 @@
     font-size: 22px;
     line-height: 26px;
   }
+  .wr-page-link-wrap > a:not(:last-child) {
+    margin-right: 20px;
+  }
+  ul.refund-comn-ul .card-details,
+  ul.refund-comn-ul .rcard-status-wrap {
+    flex-direction: column;
+  }
+  ul.refund-comn-ul .rcard-status-wrap > div,
+  ul.refund-comn-ul .card-details > div {
+    width: 100%;
+  }
+  ul.refund-comn-ul .rcard-info {
+    margin-bottom: 10px;
+    margin-right: 0px;
+    min-width: 100%;
+  }
+  ul.refund-comn-ul .total-val-wrap {
+    margin-bottom: 10px;
+  }
+  ul.card-refund-ul.card-details {
+    width: 50%;
+  }
+  ul.card-refund-ul .rcard-status-wrap {
+    width: 40%;
+  }
+  .wr-title-wrap h2 {
+    font-size: 25px;
+    line-height: 30px;
+  }
+  .refund-filter-wrapper .rf-details-div {
+    flex-wrap: wrap;
+  }
+  .refund-filter-btn-wrap {
+    margin-top: 20px;
+    width: 100%;
+  }
+  .refund-dr-wrap {
+    margin-right: 20px;
+  }
+  .refund-sf-wrap {
+    margin: 0px;
+  }
+  .rf-details-div > div > p {
+    font-size: 14px;
+  }
+  .wr-page-link-wrap > a {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .w-50-md {
+    width: 100%;
+  }
+  ul.bank-refund-ul li {
+    padding-right: 18px;
+  }
+  ul.bank-refund-ul .total-val-wrap {
+    text-align: end;
+  }
+  ul.bank-refund-ul .rcard-status-wrap {
+    flex-direction: column-reverse;
+  }
+  ul.bank-refund-ul .status-wrap {
+    margin-bottom: 10px;
+  }
+  .wh-status-amt-wrap {
+    flex-direction: column-reverse;
+  }
+  .wh-status-amt-wrap > div {
+    width: 100% !important;
+  }
+  .wh-status-amt-wrap > div:not(:last-child) {
+    margin-bottom: 5px;
+  }
 }
 @media only screen and (max-width: 640px) {
   .crop_container {
@@ -3800,12 +3977,51 @@
     justify-content: center !important;
   }
   .act-status-wrap button.btn {
-    padding: 7px 5px;
+    padding: 7px 8px;
     font-size: 9px;
     line-height: 12px;
   }
   .act-status-wrap button.btn svg {
     max-width: 8px;
+  }
+  ul.card-refund-ul .card-details {
+    width: 60%;
+  }
+  ul.card-refund-ul .rcard-status-wrap {
+    width: 40%;
+    text-align: end;
+  }
+  ul.refund-comn-ul .rcard-details-wrap {
+    flex-wrap: wrap;
+  }
+  ul.refund-comn-ul .btns-wrap {
+    margin-top: 5px;
+  }
+  ul.refund-comn-ul .rcard-img-wrap {
+    width: 65px;
+  }
+  ul.refund-comn-ul .rcard-details-wrap {
+    width: calc(100% - 65px);
+    align-items: start;
+  }
+  ul.refund-comn-ul .eligible-value-wrap,
+  ul.refund-comn-ul .total-val-wrap {
+    font-size: 14px;
+    line-height: 18px;
+  }
+  ul.refund-comn-ul .status-wrap button.btn {
+    font-size: 10px;
+  }
+  ul.refund-comn-ul .rcard-info h3 {
+    font-size: 16px;
+    line-height: 16px;
+  }
+  ul.refund-comn-ul .rcard-details-wrap > div {
+    padding-right: 0px;
+  }
+  ul.refund-comn-ul {
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 @media only screen and (max-width: 575px) {
@@ -4200,6 +4416,46 @@
   .dashboard-graph-sec ul.recent-act-lw-main .act-amt-status-wrap > div {
     text-align: left;
   }
+  /* ul.refund-comn-ul .card-details,
+  ul.refund-comn-ul .rcard-status-wrap{
+    width: 100%;
+    text-align: start;
+  }
+  ul.refund-comn-ul .rcard-status-wrap{
+    margin-top: 8px;
+  } */
+  ul.refund-comn-ul .rcard-img-wrap {
+    width: 38px;
+    padding-left: 0px;
+  }
+  ul.bank-refund-ul li {
+    padding-right: 8px;
+  }
+  .bank-refund-ul .rcard-img-wrap .wr-bank-svg svg {
+    width: 20px;
+  }
+  .bank-refund-ul .rcard-img-wrap .wr-bank-svg {
+    width: 38px;
+    height: 38px;
+    border-radius: 19px;
+  }
+  ul.refund-comn-ul .rcard-details-wrap {
+    width: calc(100% - 38px);
+  }
+  .refund-dr-wrap {
+    margin-right: 0px;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+  .refund-sf-wrap {
+    min-height: 80px;
+    max-width: 300px;
+    width: 100%;
+  }
+  .refund-dr-wrap .date-filter-calendar > input {
+    max-width: 300px !important;
+    width: 100% !important;
+  }
 }
 @media only screen and (max-width: 400px) {
   .notification-user-wrap {
@@ -4226,6 +4482,18 @@
   }
   .wallet-slider .wallet-ac-inner {
     height: 190px;
+  }
+  ul.refund-comn-ul .rcard-info p,
+  .wrb-date-wrap p {
+    font-size: 11.5px;
+  }
+  ul.refund-comn-ul .rcard-info h3 {
+    font-size: 14px;
+  }
+  ul.refund-comn-ul .eligible-value-wrap,
+  ul.refund-comn-ul .total-val-wrap {
+    font-size: 12px;
+    line-height: 16px;
   }
 }
 @media only screen and (max-width: 1366px) and (min-width: 768px) {
