commit 0.1.0 added changes for currency format, withdraw APi changes, other fixes 21-Jun-2023

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -8374,7 +8374,7 @@ button.shedule-date-filter:hover {
   color: var(--dark_blue);
 }
 
-.sp-total-amt span {
+.sp-total-amt span:first-child {
   color: var(--blue);
   margin-right: 15px;
 }
