commit 0.1.0 added changes for withdraw module flow 23-Jun-2023

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -9138,7 +9138,7 @@ ul.bank-refund-ul .rcard-info {
 }
 .wr-withdraw-his-data .wh-id-date-wrap > div,
 .wr-withdraw-his-data .wh-status-amt-wrap > div {
-  width: 50%;
+  /* width: 50%; */
 }
 .wh-card-num {
   width: 26%;
