--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -3394,7 +3394,8 @@
     padding-right: 0;
   }
   .main-search-wrap {
-    width: calc(100% - 160px);
+    /* width: calc(100% - 160px); */
+    width: 100%;
     max-width: 327px;
     margin-right: 15px;
     margin-left: 0;
@@ -3404,9 +3405,6 @@
   }
   .main-search-wrap .search-field {
     max-width: 100%;
-  }
-  .main-search-wrap {
-    width: 100%;
   }
   .send-top-right-sec {
     width: 100%;
