commit 0.1.0 added changes for schema-msg fixes, withdraw-recipt-download, other changes 06-July-2023

--- a/src/styles/css/dashboard.css
+++ b/src/styles/css/dashboard.css
@@ -343,7 +343,7 @@
 }
 
 .dashboard-graph-sec ul.recent-act-lw-main .act-amt-status-wrap > div {
-  text-align: end;
+  text-align: center;
 }
 
 .dashboard-recent-contact-sec .recent-contact-sec form .form-field {
