--- a/src/styles/css/withdraw.css
+++ b/src/styles/css/withdraw.css
@@ -559,7 +559,7 @@ ul.bank-refund-ul .rcard-info {
 .wcr-info-1 .wcr-card-amt {
   text-align: end;
 }
-/* Wallet Refund Bank Transection Details */
+/* Wallet Refund Bank Transaction Details */
 .wr-dwld-wrap ul {
   display: flex;
 }
