commit 0.1.0 added changes for recipt-download, activity status changes 19-July-2023

--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,9 @@ code {
 .cx-bg-gray {
   background: rgba(157, 162, 165, 0.1);
 }
+.cx-bg-orange {
+  background: rgba(255, 69, 0, 0.1);
+}
 
 .cx-color-blue {
   color: #0081c5;
@@ -136,4 +139,7 @@ code {
 }
 .cx-color-gray {
   color: #2c2f31;
+}
+.cx-color-orange {
+  color: #ff4500;
 }
