--- a/src/styles/css/withdraw.css
+++ b/src/styles/css/withdraw.css
@@ -562,6 +562,7 @@ ul.bank-refund-ul .rcard-info {
   display: flex;
 }
 .wr-dwld-wrap ul li {
+  background-color: #d9d9d9;
   margin: 0px 6px;
   width: 70px;
   height: 70px;
