--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -4094,6 +4094,9 @@
     font-size: 11px;
     line-height: 13px;
   }
+  .user-details-modal .modal-body {
+    padding: 60px 30px 40px;
+  }
 }
 @media only screen and (max-width: 640px) {
   .crop_container {
